--- a/ilovecookies.css
+++ b/ilovecookies.css
@@ -1,4 +1,5 @@
-#ilovecookies {
+.ilovecookies
+{
     position: fixed;
     bottom: 0;
     left: 0;
@@ -6,34 +7,47 @@
     background-color: rgba(0, 0, 0, 0.75);
     color: #fff;
     z-index:40000;
+    transition: opacity 0.5s ease-in-out;
 }
-#ilovecookies .inner {
+.ilovecookies--fadeout
+{
+    opacity:0;
+    pointer-events:none;
+}
+.ilovecookies__inner
+{
     margin:0 auto;
     width:95%;
     max-width:1280px;
     padding: 10px 0;
 }
-#ilovecookies .inner .text {
+.ilovecookies__text
+{
     font-size:20px;
 }
-#ilovecookies .inner .buttons {
+.ilovecookies__buttons
+{
     margin-top:20px;
 }
-#ilovecookies .inner .buttons:after {
+.ilovecookies__buttons:after
+{
     clear:both;
     display:table;
     content:'';
 }
-#ilovecookies .inner .buttons a {
+.ilovecookies__buttons a
+{
     color:inherit;
     text-decoration:none;
     font-weight:bold;
 }
-#ilovecookies .inner .buttons .more {
+.ilovecookies__more
+{
     font-size:20px;
     float:left;
 }
-#ilovecookies .inner .buttons .close {
+.ilovecookies__close
+{
     font-size:20px;
     float:right;
 }
