--- a/ilovecookies.css
+++ b/ilovecookies.css
@@ -4,10 +4,11 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.90);
     color: #fff;
     z-index:40000;
     transition: opacity 0.5s ease-in-out;
+    font-size:17px;
 }
 .ilovecookies--fadeout
 {
@@ -23,11 +24,11 @@
 }
 .ilovecookies__text
 {
-    font-size:20px;
+
 }
 .ilovecookies__buttons
 {
-    margin-top:20px;
+    margin-top:15px;
 }
 .ilovecookies__buttons:after
 {
@@ -43,11 +44,21 @@
 }
 .ilovecookies__more
 {
-    font-size:20px;
     float:left;
 }
 .ilovecookies__close
 {
-    font-size:20px;
     float:right;
+}
+
+@media screen and (max-width: 700px)
+{
+    .ilovecookies
+    {
+        font-size:14px;
+    }
+    .ilovecookies__buttons
+    {
+        margin-top:10px;
+    }
 }
